--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fluentui/font-icons-mdl2": "^8.5.62",
     "@fluentui/react-components": "^9.61.6",
+    "@fluentui/react-icons-mdl2": "^1.3.87",
     "next": "14.2.28",
     "react": "^18",
     "react-dom": "^18"
