--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@fluentui/font-icons-mdl2": "^8.5.62",
-    "@fluentui/react-components": "^9.61.6",
+    "@fluentui/react-components": "^9.64.1",
+    "@fluentui/react-icons": "^2.0.302",
     "@fluentui/react-icons-mdl2": "^1.3.87",
-    "next": "14.2.28",
-    "react": "^18",
-    "react-dom": "^18"
+    "clsx": "^2.1.1",
+    "next": "15.3.3",
+    "next-intl": "^4.1.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
