--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/Haxrox/HaxServer#readme",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
+    "google-auth-library": "^10.1.0",
     "helmet": "^8.1.0"
   }
 }
